Fix formatting of programming languages list

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>What I'm Learning</h2>
         <ul>
             <li>Git and GitHub</li>
-            <li>Python,Javascript,AI and Machine Learning</li>
+            <li>Python, Javascript,nAI and Machine Learning</li>
         </ul>
     </div>
 
